--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 		</section>
 
 	</div>
+	
+	<a href="Sephallia.github.io/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>
 
 </body>
 </html>
