--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 	</div>
 	
 	<a href="Sephallia.github.io/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>
+	<a href="https://github.com/Sephallia/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>
 
 </body>
 </html>
