--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	
 	<!--<a href="Sephallia.github.io/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>-->
 	<!--<a href="https://github.com/Sephallia/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>-->
-	<embed src="https://sumanbogati.github.io/sample.pdf" type="application/pdf" />
+	<embed src="https://Sephallia.github.io/sample.pdf" type="application/pdf" />
 
 </body>
 </html>
