--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
 	</div>
 	
-	<!--<a href="Sephallia.github.io/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>-->
+	<a href="Sephallia.github.io/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>
 	<!--<a href="https://github.com/Sephallia/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>-->
-	<embed src="https://Sephallia.github.io/contract.pdf" type="application/pdf" />
+	<!--<embed src="https://Sephallia.github.io/contract.pdf" type="application/pdf" />-->
 
 </body>
 </html>
