--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@
 
 	</div>
 	
-	<a href="contract.pdf" target="_blank">PDF.</a>
-	<!--<a href="https://github.com/Sephallia/CPSC481-Calendar/contract.pdf" target="_blank">PDF.</a>-->
-	<!--<embed src="https://Sephallia.github.io/contract.pdf" type="application/pdf" />-->
-
+	<div class="TeamSubmissions">
+		<article class="TeamArticle">
+			<h2>Team Submissions</h2>
+		</article>
+	</div>
+	
+	<a href="contract.pdf" target="_blank">Team Contract PDF.</a>
+	<a href="project_phase_one.pdf" target="_blank">Project Phase One PDF.</a>
+	
 </body>
 </html>
