image didn't properly load

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 		
 			<div class="profileColumn">
-				<img class="profilePic" src="images/dennis_nguyen.png" alt="pic" style="width:64px; height:64px;">
+				<img class="profilePic" src="images/dennis.png" alt="pic" style="width:64px; height:64px;">
 				<article class="profileArticle">
 					<h2>Dennis Nguyen</h2>
 					<script src="javascript/aboutus/dennis_nguyen.js"></script>
