--- a/index.html
+++ b/index.html
@@ -95,9 +95,15 @@
 			<h2>Team Submissions</h2>
 		</article>
 	</div>
-	
-	<a href="contract.pdf" target="_blank">Team Contract PDF.</a>
-	<a href="project_phase_one.pdf" target="_blank">Project Phase One PDF.</a>
+	<div class="submission">
+        <a href="contract.pdf" target="_blank">Team Contract PDF.</a>
+    </div>
+    <div class="submission">
+        <a href="project_phase_one.pdf" target="_blank">Project Phase One PDF.</a>
+    </div>
+    <div class="submission">
+        <a href="mockup_submission.bmpr" target="_blank">Project Phase Two Balsamiq Mockups.</a>
+    </div>
 	
 </body>
 </html>
