--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     <div class="submission">
         <a href="mockup_submission.bmpr" target="_blank">Project Phase Two Balsamiq Mockups.</a>
     </div>
+    <div class="submission">
+        <a href="https://xd.adobe.com/view/474fe7e4-2568-4ff2-6df9-801926b1efbd-317e/" target="_blank">Project Phase Three Adobe XD Hi-Fi.</a>
+    </div>
+    <div class="submission">
+        <a href="project_phase_three_evaluation.pdf" target="_blank">Project Phase Three, Evaluation for Group 2</a>
+    </div>
 	
 </body>
 </html>
